turtleart.flower.Flower.scala.error
Compilation error:
Flower:2: error: '<-' expected but '}' found.
} 
^